attempt fix label unaligned

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -225,7 +225,7 @@
     }
 
     + p {
-      margin-top: 0;
+      // margin-top: 0;
     }
   }
 }
